fix misaligned source icon (#1855)

--- a/frontend/amundsen_application/static/css/_layouts.scss
+++ b/frontend/amundsen_application/static/css/_layouts.scss
@@ -29,6 +29,8 @@ $close-btn-size: 24px;
     }
 
     .header-section {
+      flex-shrink: 0;
+
       &.header-title {
         flex-grow: 1;
 
